# tdlib_wrapper

./: CMakeLists.txt
src/: CMakeLists.txt  main.c  td_lib_wrapper.c  td_lib_wrapper.h
